--- a/register.html
+++ b/register.html
@@ -1,66 +1,117 @@
- 
-
-
-
 <!DOCTYPE html>
 <html lang="en">
+<style>
+.container {
+    padding: 90px;
+}
+.container1 {
+    padding: 35px;
+}
+</style>
 <head>
   <meta charset="UTF-8">
-  <title>JQuery Hands-on Basics</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css"></link>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <title>Register Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+  <!-- form -->
 <div class="container">
-<form>
-  
-<div class="container">
-  <form>
-    <input type="hidden" id="inputID" value="[your_id_number]">
-
-  </div>
-    
-  <div>
-    <h3>Sign up for free</h3>
+<div class="container1" style="border:1px solid #ccccb3">
+<form class="relevant">
+<div class="row">
+    <div>
+      <div id="successMsg" class="alert alert-success hide" role="alert">Registration Successful!</div>
+    <form role="form">
+      <input type="hidden" id="inputID" value="12003453">
+      <h4>Sign up for free</h4>
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-          <input class="form-control" type="email" id="inputEmail" placeholder="First Name*" required>
+            <input type="text" name="first_name" id="inputFirstName" placeholder="First Name*" class="form-control input-lg"  tabindex="1" required>
+          </div>
         </div>
-      </div>
         <div class="col-md-6">
           <div class="form-group">
-          <input class="form-control" type="password" id="inputPassword" placeholder="Last Name*"required>
+            <input type="text" name="last_name" id="last_name" class="form-control input-lg" id="inputLastName" placeholder="Last Name*" tabindex="2" required>
+          </div>
         </div>
       </div>
-    </div>
-      <div class="row">
-          <div class="col-md-12">
-          <div class="form-group">
-      <input class="form-control" type="email" id="inputEmail" placeholder="Email Address*" required>
-    </div>
+      <div class="form-group">
+        <input type="email" name="email" id="inputEmail" placeholder="Email Address*" class="form-control input-lg"  tabindex="3" required>
+      </div>
+      <div class="form-group">
+        <input type="text" id="inputPassword" placeholder="Password*" class="form-control input-lg"  tabindex="4" required>
+      </div>
+      <div class="form-group">
+        <div class="form-group"><button type="submit" class="btn btn-primary pull-right">Sign up</button></div>
+      </div>
+    </form>
   </div>
-
 </div>
-      <div class="row">
-          <div class="col-md-12">
-              <div class="form-group">
-      <input class="form-control" type="text" id="inputPassword" placeholder="Password*" required>
-    </div>
-  </div>
-    </div>
-
-    </div>
+</div>
 </form>
-
-
-    <div class="form-group">
-      <button type="submit" class="btn btn-primary pull-right">Sign up</button>
-    </div>
-  </form>
 </div>
+</div>
+<div id="saveModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Confirmation</h4>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to sign-up with the following info?</p>
+        <div class="userInput"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary btn-login">Sign-up!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    var input = {};
+    $('form').submit(function(e) {
+      e.preventDefault();
+      var $this = $(this);
+      input = $this.serialize();
+      console.log(input);
+      // fill in user input
+      $('#saveModal .userInput').empty();
+      $('#saveModal .userInput').append(
+        $('<p></p>').html('<strong>Name: </strong>'+ $('#inputFirstName').val() +' '+ $('#inputLastName').val())
+      );
+      $('#saveModal .userInput').append(
+        $('<p></p>').html('<strong>Email: </strong>'+ $('#inputEmail').val())
+      );
+      $('#saveModal').modal('show');
+    });
+    $('.btn-login').click(function(e) {
+      e.preventDefault();
+      // send ajax request
+      $.ajax({
+        method: "POST",
+        url: "http://tolitsdelizo.info/st-activities/jquery/register.php",
+        data: input
+      })
+      .done(function( msg ) {
+        if (msg == 'OK') {
+          // show success msg
+          $('#successMsg').removeClass('hide').show();
+          // reset form
+          $('input[type=text], input[type=email], input[type=password]', 'form').val(null);
+          $('#saveModal').modal('hide');          
+        }
+      });
+      
+    });
+  });
+</script>
 
 </body>
 </html>
- 
